[project]
name = "Scalable Interpretability"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["scalableinterp"]

[build-system]
requires = [
    "setuptools>=61",  # Specify setuptools version for good pyproject.toml support
    "wheel",
]
build-backend = "setuptools.build_meta"